--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Sam Griffin
-base_url: www.samjgriffin.com
+base_url: https://samjgriffin89.github.io/samjgriffin.com
 email: samjgriffin89@gmail.com
 description: > #
   I am Sam Griffin, a full stack developer currently working at Cardfree,building out RESTful services that supports our mobile apps and customer portal. 
