--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > #
   For the most part I am working in .NET using Web API, but am becoming more immersed in RoR and grails.
 
 google_analytics_id: UA-24433484-1
-google_site_verification: 
+google_site_verification: cT3CHL7PrHfUex3GIuLkyjnk-deuZyedUYGqJGOKGEc
 
 # Build settings
 markdown: kramdown
