--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Sam Griffin
+title: Sam J Griffin
 base_url: samjgriffin.com
 email: samjgriffin89@gmail.com
-description: > #
-  I am Sam Griffin, a full stack developer currently working at Cardfree,building out RESTful services that supports our mobile apps and customer portal. 
-  For the most part I am working in .NET using Web API, but am becoming more immersed in RoR and grails.
+
+meta_title: Sam J Griffin | Engineer & Kid at Heart
+description: I'm an engineer. I'm a kid at heart. I enjoy solving complex problems like scalability of applications, and also sledding down sand dunes at 40mph.
 
 google_analytics_id: UA-24433484-1
 google_site_verification: cT3CHL7PrHfUex3GIuLkyjnk-deuZyedUYGqJGOKGEc
