--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: Sam J Griffin
 base_url: https://www.samjgriffin.com
 email: samjgriffin89@gmail.com
 
-meta_title: Sam J Griffin | Engineer & Kid at Heart
-description: I'm an engineer. I'm a kid at heart. I enjoy solving complex problems like scalability of applications, and also sledding down sand dunes at 40mph.
+meta_title: Sam J Griffin | Payments & POS Specialist
+description: I enjoy solving complex problems like scalability of applications and working with payment and point of sale cloud api integrations.
 
 google_analytics_id: UA-24433484-1
 google_site_verification: cT3CHL7PrHfUex3GIuLkyjnk-deuZyedUYGqJGOKGEc
