--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ email: samjgriffin89@gmail.com
 meta_title: Sam J Griffin | Payments & POS Specialist
 description: I enjoy solving complex problems like scalability of applications and working with payment and point of sale cloud api integrations.
 
-google_analytics_id: UA-24433484-1
+google_analytics_id: G-1MRVVZX7R8
 google_site_verification: cT3CHL7PrHfUex3GIuLkyjnk-deuZyedUYGqJGOKGEc
 
 # Build settings
